<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <POU Name="Client" Id="{20065e37-de3f-4942-a8b2-cbbb8d186bf3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Client
VAR 
	sSrvNetID	              : T_AmsNetID	:= '';
	FB_ClientServerConnection : FB_ClientServerConnection;
	FB_SocketSend             : FB_SocketSend;
	FB_SocketReceive          : FB_SocketReceive;	
	cSendDataTemp             : SEND_iCMD_DATA;//STRING(255);
	cReceiveDataTemp          : REC_iCMD_DATA;//STRING(255);
	cSendDataInit             : SEND_iCMD_DATA;//STRING(255);
	cReceiveDataInit          : REC_iCMD_DATA;//STRING(255);	
	bReceiveEn                : BOOL;
	nState         	          : INT;
	tSendDelay     	          : TON;
	tReceiveDelay             : TON;
END_VAR
VAR_INPUT
	bEnable                   : BOOL;
	sRemoteHost               : T_IPv4Addr;
	nRemotePort               : UDINT;
	cSendData                 : SEND_iCMD_DATA;//STRING(255);
	bSendEn                   : BOOL;
END_VAR
VAR_OUTPUT
	eState                    : E_SocketConnectionState:= eSOCKET_DISCONNECTED;
	cReceiveData              : REC_iCMD_DATA;//STRING(255);
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[FB_ClientServerConnection(
	sSrvNetID:=sSrvNetID , 
	nMode:=CONNECT_MODE_ENABLEDBG , 
	sRemoteHost:=sRemoteHost , 
	nRemotePort:=nRemotePort , 
	bEnable:=bEnable , 
	tReconnect:=T#5S , 
	bBusy=> , 
	bError=> , 
	nErrId=> , 
	hSocket=> , 
	eState=>eState );

FB_SocketSend(
	sSrvNetId:=sSrvNetID , 
	hSocket:=FB_ClientServerConnection.hSocket , 
	cbLen:=SIZEOF(cSendDataTemp) , 
	pSrc:=ADR(cSendDataTemp) , 
	bExecute:=bSendEn , 
	tTimeout:= , 
	bBusy=> , 
	bError=> , 
	nErrId=> );

FB_SocketReceive(
	sSrvNetId:=sSrvNetID , 
	hSocket:=FB_ClientServerConnection.hSocket , 
	cbLen:=SIZEOF(cReceiveDataTemp) , 
	pDest:=ADR(cReceiveDataTemp) , 
	bExecute:=bReceiveEn , 
	tTimeout:= , 
	bBusy=> , 
	bError=> , 
	nErrId=> , 
	nRecBytes=> );
	
CASE nState OF
	0:	
		IF FB_ClientServerConnection.bEnable THEN
			IF NOT FB_ClientServerConnection.bBusy THEN
				IF NOT FB_ClientServerConnection.bError THEN
					tReceiveDelay(IN:=FALSE);
					tSendDelay(IN:=FALSE);
					nState:=1;
				END_IF
			END_IF
		END_IF
	1:
	(*----------------------------------------Receive data-----------------------------------------------------*)
		tReceiveDelay(IN:=NOT tReceiveDelay.Q   , PT:=T#100MS , Q=> , ET=> );
		bReceiveEn:=tReceiveDelay.Q;
		IF tReceiveDelay.Q THEN		
				IF NOT FB_SocketReceive.bBusy THEN
					IF NOT FB_SocketReceive.bError THEN
						IF FB_SocketReceive.nRecBytes <> 0 THEN
							cReceiveData:=cReceiveDataInit;
							cReceiveData:=cReceiveDataTemp;//LEFT(cReceiveDataTemp,UDINT_TO_INT(FB_SocketReceive.nRecBytes));
						END_IF
					END_IF
				END_IF
		END_IF
	(*------------------------------------------------------------------------------------------------------*)
	     
	(*----------------------------------------Send data-----------------------------------------------------*)
		tSendDelay(IN:=NOT tSendDelay.Q , PT:=T#100MS , Q=> , ET=> );
		IF tSendDelay.Q THEN
			IF NOT FB_SocketSend.bBusy THEN
				IF NOT FB_SocketSend.bError THEN
					IF SIZEOF(cSendData) <> 0 THEN						
							cSendDataTemp:=cSendData;
							//bSendEn:=TRUE;
							nState:=2;
					END_IF
				END_IF
			END_IF
		END_IF
	2:
		cSendData:=cSendDataInit;
	 	tReceiveDelay(IN:=FALSE);
		tSendDelay(IN:=FALSE);
		bReceiveEn:=FALSE;
		//bSendEn:=FALSE;
		nState:=0;
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>